[[changeLog]]
=== Change log

=== Version 4.0.0 (Still being developed)

* AST based solution.
* Closures instead of SpEL
* Controller caching is no longer supported.

=== Version 1.1.7 - June 24, 2014

Requires Grails 2.3 or later

=== Version 1.1.6 - May 9, 2014


=== Version 1.1.5 - April 25, 2014


=== Version 1.1.4 - April 25, 2014


=== Version 1.1.3 - April 24, 2014


=== Version 1.1.2 - April 23, 2014


=== Version 1.1.1 - July 3, 2013


=== Version 1.1 - July 3, 2013


=== Version 1.0.1 - October 28, 2012


=== Version 1.0.0 - July 4, 2012


=== Version 1.0.0.RC1 - May 22, 2012


=== Version 1.0.0.M2 - May 12, 2012
