@@ -208,4 +208,22 @@ abstract class AbstractCacheTransformation extends AbstractMethodDecoratingTrans
             }
         }.visitClosureExpression(closureExpression)
     }
+
+    protected void handleCacheCondition(SourceUnit sourceUnit, AnnotationNode annotationNode, MethodNode methodNode, MethodCallExpression originalMethodCallExpr, BlockStatement newMethodBody) {
+        Expression conditionMember = annotationNode.getMember('condition')
+        if (conditionMember instanceof ClosureExpression) {
+            ClosureExpression closureExpression = (ClosureExpression) conditionMember
+            makeClosureParameterAware(sourceUnit, methodNode, closureExpression)
+            // Adds check whether caching should happen
+            // if(!condition.call()) {
+            //    return originalMethodCall.call()
+
+            Statement ifShouldCacheMethodCallStatement = ifS(
+                    notX(callX(conditionMember, "call")),
+                    returnS(originalMethodCallExpr)
+            )
+            newMethodBody.addStatement(ifShouldCacheMethodCallStatement)
+            annotationNode.members.remove('condition')
+        }
+    }
 }
