@@ -20,21 +20,27 @@ import groovy.transform.CompileStatic
 import org.codehaus.groovy.ast.AnnotationNode
 import org.codehaus.groovy.ast.ClassNode
 import org.codehaus.groovy.ast.MethodNode
+import org.codehaus.groovy.ast.expr.ConstantExpression
 import org.codehaus.groovy.ast.expr.Expression
 import org.codehaus.groovy.ast.expr.MethodCallExpression
 import org.codehaus.groovy.ast.expr.VariableExpression
 import org.codehaus.groovy.ast.stmt.BlockStatement
+import org.codehaus.groovy.ast.stmt.Statement
 import org.codehaus.groovy.control.CompilePhase
 import org.codehaus.groovy.control.SourceUnit
 import org.codehaus.groovy.transform.GroovyASTTransformation
+import org.h2.schema.Constant
+import org.springframework.cache.Cache
 
 import static org.codehaus.groovy.ast.ClassHelper.make
 import static org.codehaus.groovy.ast.tools.GeneralUtils.block
 import static org.codehaus.groovy.ast.tools.GeneralUtils.callX
+import static org.codehaus.groovy.ast.tools.GeneralUtils.declS
 import static org.codehaus.groovy.ast.tools.GeneralUtils.ifS
 import static org.codehaus.groovy.ast.tools.GeneralUtils.notNullX
 import static org.codehaus.groovy.ast.tools.GeneralUtils.stmt
 import static org.codehaus.groovy.ast.tools.GeneralUtils.varX
+import static org.grails.datastore.gorm.transform.AstMethodDispatchUtils.callD
 
 /**
  * Implementation of {@link CacheEvict}
@@ -51,18 +57,40 @@ class CacheEvictTransformation extends AbstractCacheTransformation {
 
     @Override
     protected Expression buildDelegatingMethodCall(SourceUnit sourceUnit, AnnotationNode annotationNode, ClassNode classNode, MethodNode methodNode, MethodCallExpression originalMethodCallExpr, BlockStatement newMethodBody) {
-        VariableExpression cacheManagerVariableExpression = varX(GRAILS_CACHE_MANAGER_PROPERTY_NAME)
-        BlockStatement cachingBlock = block()
 
+        VariableExpression cacheManagerVariableExpression = varX(GRAILS_CACHE_MANAGER_PROPERTY_NAME)
+        handleCacheCondition(sourceUnit, annotationNode,  methodNode, originalMethodCallExpr, newMethodBody)
+
+        BlockStatement cachingBlock = block()
 
         // Cache $_cache_cacheVariable = this.grailsCacheManager.getCache("...");
         VariableExpression cacheDeclaration = declareCache(annotationNode, cacheManagerVariableExpression, cachingBlock)
 
-        // $_cache_cacheVariable.clear()
-        cachingBlock.addStatement(
-            stmt(callX(cacheDeclaration, 'clear'))
-        )
+        Statement statement
 
+        boolean clearAllEntries = false
+
+        Expression allEntries = annotationNode.getMember('allEntries')
+        if (allEntries instanceof ConstantExpression) {
+            clearAllEntries = ((ConstantExpression)allEntries).isTrueExpression()
+            annotationNode.members.remove('allEntries')
+        }
+
+        if (clearAllEntries) {
+            // $_cache_cacheVariable.clear()
+            statement = stmt(callX(cacheDeclaration, 'clear'))
+        } else {
+            // def $_method_parameter_map = [name:value]
+            declareAndInitializeParameterValueMap(annotationNode, methodNode, cachingBlock)
+
+            // def $_cache_cacheKey = customCacheKeyGenerator.generate(className, methodName, hashCode, $_method_parameter_map)
+            VariableExpression cacheKeyDeclaration = declareCacheKey(sourceUnit, annotationNode, classNode, methodNode , cachingBlock)
+
+            // $_cache_cacheVariable.evict($_cache_cacheKey)
+            statement = stmt(callX(cacheDeclaration, 'evict', cacheKeyDeclaration))
+        }
+
+        cachingBlock.addStatement(statement)
 
         newMethodBody.addStatement(
                 // if(grailsCacheManager != null)
