@@ -60,7 +60,7 @@ class MessageService {
 
    ...
 
-   @CachePut(value='message', key= { message.title })
+   @CachePut(value='message', key = { message.title })
    void save(Message message) {
       println "Saving message $message"
       message.save()
